--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -57,7 +57,7 @@ services:
 
   # $ mongo
   mongodb_product:
-    image: mongo:3.6.9
+    image: mongo
     environment:
       MONGO_INITDB_ROOT_USERNAME: mongo
       MONGO_INITDB_ROOT_PASSWORD: mongo
@@ -65,13 +65,12 @@ services:
       TZ: Asia/Tokyo
     ports:
       - "27017:27017"
-    command: mongod --smallfiles
     volumes:
       - ./initdb-mongo-product.d:/docker-entrypoint-initdb.d
 
   # $ mongo
   mongodb_recommendation:
-    image: mongo:3.6.9
+    image: mongo
     environment:
       MONGO_INITDB_ROOT_USERNAME: mongo
       MONGO_INITDB_ROOT_PASSWORD: mongo
@@ -79,13 +78,12 @@ services:
       TZ: Asia/Tokyo
     ports:
       - "27018:27017"
-    command: mongod --smallfiles
     volumes:
       - ./initdb-mongo-recommendation.d:/docker-entrypoint-initdb.d
 
   # $ mysql -uroot -h127.0.0.1 -p
   mysql:
-    image: mysql:5.7.23
+    image: mysql/mysql-server
     command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_bin
     ports:
       - "13306:3306"
@@ -103,7 +101,7 @@ services:
       retries: 10
 
   rabbitmq:
-    image: rabbitmq:3.7.8-management
+    image: rabbitmq:3.8-management
     ports:
       - 5672:5672
       - 15672:15672
